FADE ULTRA SUAVE: Entrada agora 0.4→0.6→0.8→1 (sem piscar em animacao rapida)

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             14% { transform: translateY(-40px); opacity: 1; } /* Movimento mantendo visibilidade */
             15% { transform: translateY(-60px); opacity: 0.8; } /* Leve fade no meio */
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
-            17% { transform: translateY(-100px); opacity: 0; } /* Totalmente invisível no começo */
-            18% { transform: translateY(-110px); opacity: 0.5; } /* Fade mais acentuado */
+            17% { transform: translateY(-100px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            18% { transform: translateY(-110px); opacity: 0.6; } /* Fade gradual */
             19% { transform: translateY(-115px); opacity: 0.8; } /* Leve fade no meio do movimento */
             20% { transform: translateY(-120px); opacity: 1; } /* Continua visível subindo */
             34% { transform: translateY(-120px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
@@ -178,8 +178,8 @@
             36% { transform: translateY(-160px); opacity: 1; } /* Movimento mantendo visibilidade */
             37% { transform: translateY(-180px); opacity: 0.8; } /* Leve fade no meio */
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
-            39% { transform: translateY(-220px); opacity: 0; } /* Totalmente invisível no começo */
-            40% { transform: translateY(-230px); opacity: 0.5; } /* Fade mais acentuado */
+            39% { transform: translateY(-220px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            40% { transform: translateY(-230px); opacity: 0.6; } /* Fade gradual */
             41% { transform: translateY(-235px); opacity: 0.8; } /* Leve fade no meio do movimento */
             42% { transform: translateY(-240px); opacity: 1; } /* Continua visível subindo */
             56% { transform: translateY(-240px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
@@ -187,8 +187,8 @@
             58% { transform: translateY(-280px); opacity: 1; } /* Movimento mantendo visibilidade */
             59% { transform: translateY(-300px); opacity: 0.8; } /* Leve fade no meio */
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
-            61% { transform: translateY(-340px); opacity: 0; } /* Totalmente invisível no começo */
-            62% { transform: translateY(-350px); opacity: 0.5; } /* Fade mais acentuado */
+            61% { transform: translateY(-340px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            62% { transform: translateY(-350px); opacity: 0.6; } /* Fade gradual */
             63% { transform: translateY(-355px); opacity: 0.8; } /* Leve fade no meio do movimento */
             64% { transform: translateY(-360px); opacity: 1; } /* Continua visível subindo */
             78% { transform: translateY(-360px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
@@ -196,8 +196,8 @@
             80% { transform: translateY(-400px); opacity: 1; } /* Movimento mantendo visibilidade */
             81% { transform: translateY(-420px); opacity: 0.8; } /* Leve fade no meio */
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
-            83% { transform: translateY(-460px); opacity: 0; } /* Totalmente invisível no começo */
-            84% { transform: translateY(-470px); opacity: 0.5; } /* Fade mais acentuado */
+            83% { transform: translateY(-460px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            84% { transform: translateY(-470px); opacity: 0.6; } /* Fade gradual */
             85% { transform: translateY(-475px); opacity: 0.8; } /* Leve fade no meio do movimento */
             86% { transform: translateY(-480px); opacity: 1; } /* Continua visível subindo */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
