TIMING EXPANDIDO: Fade agora comeca mais cedo e dura mais (8 keyframes vs 3) - ultra suave!

--- a/index.html
+++ b/index.html
@@ -169,36 +169,52 @@
             14% { transform: translateY(-40px); opacity: 1; } /* Movimento mantendo visibilidade */
             15% { transform: translateY(-60px); opacity: 0.8; } /* Leve fade no meio */
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
-            17% { transform: translateY(-100px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            16.5% { transform: translateY(-90px); opacity: 0.4; } /* Começa fade de entrada mais cedo */
+            17% { transform: translateY(-100px); opacity: 0.45; } /* Fade muito gradual */
+            17.5% { transform: translateY(-105px); opacity: 0.5; } /* Continuando fade suave */
             18% { transform: translateY(-110px); opacity: 0.6; } /* Fade gradual */
+            18.5% { transform: translateY(-113px); opacity: 0.7; } /* Meio do fade */
             19% { transform: translateY(-115px); opacity: 0.8; } /* Leve fade no meio do movimento */
+            19.5% { transform: translateY(-118px); opacity: 0.9; } /* Quase visível */
             20% { transform: translateY(-120px); opacity: 1; } /* Continua visível subindo */
             34% { transform: translateY(-120px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
             36% { transform: translateY(-160px); opacity: 1; } /* Movimento mantendo visibilidade */
             37% { transform: translateY(-180px); opacity: 0.8; } /* Leve fade no meio */
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
-            39% { transform: translateY(-220px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            38.5% { transform: translateY(-210px); opacity: 0.4; } /* Começa fade de entrada mais cedo */
+            39% { transform: translateY(-220px); opacity: 0.45; } /* Fade muito gradual */
+            39.5% { transform: translateY(-225px); opacity: 0.5; } /* Continuando fade suave */
             40% { transform: translateY(-230px); opacity: 0.6; } /* Fade gradual */
+            40.5% { transform: translateY(-233px); opacity: 0.7; } /* Meio do fade */
             41% { transform: translateY(-235px); opacity: 0.8; } /* Leve fade no meio do movimento */
+            41.5% { transform: translateY(-238px); opacity: 0.9; } /* Quase visível */
             42% { transform: translateY(-240px); opacity: 1; } /* Continua visível subindo */
             56% { transform: translateY(-240px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
             58% { transform: translateY(-280px); opacity: 1; } /* Movimento mantendo visibilidade */
             59% { transform: translateY(-300px); opacity: 0.8; } /* Leve fade no meio */
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
-            61% { transform: translateY(-340px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            60.5% { transform: translateY(-330px); opacity: 0.4; } /* Começa fade de entrada mais cedo */
+            61% { transform: translateY(-340px); opacity: 0.45; } /* Fade muito gradual */
+            61.5% { transform: translateY(-345px); opacity: 0.5; } /* Continuando fade suave */
             62% { transform: translateY(-350px); opacity: 0.6; } /* Fade gradual */
+            62.5% { transform: translateY(-353px); opacity: 0.7; } /* Meio do fade */
             63% { transform: translateY(-355px); opacity: 0.8; } /* Leve fade no meio do movimento */
+            63.5% { transform: translateY(-358px); opacity: 0.9; } /* Quase visível */
             64% { transform: translateY(-360px); opacity: 1; } /* Continua visível subindo */
             78% { transform: translateY(-360px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
             80% { transform: translateY(-400px); opacity: 1; } /* Movimento mantendo visibilidade */
             81% { transform: translateY(-420px); opacity: 0.8; } /* Leve fade no meio */
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
-            83% { transform: translateY(-460px); opacity: 0.4; } /* Começa mais visível - fade suave */
+            82.5% { transform: translateY(-450px); opacity: 0.4; } /* Começa fade de entrada mais cedo */
+            83% { transform: translateY(-460px); opacity: 0.45; } /* Fade muito gradual */
+            83.5% { transform: translateY(-465px); opacity: 0.5; } /* Continuando fade suave */
             84% { transform: translateY(-470px); opacity: 0.6; } /* Fade gradual */
+            84.5% { transform: translateY(-473px); opacity: 0.7; } /* Meio do fade */
             85% { transform: translateY(-475px); opacity: 0.8; } /* Leve fade no meio do movimento */
+            85.5% { transform: translateY(-478px); opacity: 0.9; } /* Quase visível */
             86% { transform: translateY(-480px); opacity: 1; } /* Continua visível subindo */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
