--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
             19% { transform: translateY(-115px); opacity: 0.8; } /* Leve fade no meio do movimento */
             19.5% { transform: translateY(-118px); opacity: 0.9; } /* Quase visível */
             20% { transform: translateY(-120px); opacity: 1; } /* Continua visível subindo */
-            21% { transform: translateY(-122px); opacity: 1; } /* Micro movimento para cima */
-            22% { transform: translateY(-118px); opacity: 1; } /* Desce um pouco - assentamento */
-            23% { transform: translateY(-121px); opacity: 1; } /* Sobe novamente */
-            24% { transform: translateY(-119px); opacity: 1; } /* Desce suavemente */
+            21% { transform: translateY(-124px); opacity: 1; } /* Movimento maior para cima */
+            22% { transform: translateY(-116px); opacity: 1; } /* Desce mais - assentamento ampliado */
+            23% { transform: translateY(-122px); opacity: 1; } /* Sobe novamente - maior amplitude */
+            24% { transform: translateY(-118px); opacity: 1; } /* Desce suavemente - mais perceptível */
             25% { transform: translateY(-120px); opacity: 1; } /* Volta à posição final - assentado */
             34% { transform: translateY(-120px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
@@ -195,10 +195,10 @@
             41% { transform: translateY(-235px); opacity: 0.8; } /* Leve fade no meio do movimento */
             41.5% { transform: translateY(-238px); opacity: 0.9; } /* Quase visível */
             42% { transform: translateY(-240px); opacity: 1; } /* Continua visível subindo */
-            43% { transform: translateY(-242px); opacity: 1; } /* Micro movimento para cima */
-            44% { transform: translateY(-238px); opacity: 1; } /* Desce um pouco - assentamento */
-            45% { transform: translateY(-241px); opacity: 1; } /* Sobe novamente */
-            46% { transform: translateY(-239px); opacity: 1; } /* Desce suavemente */
+            43% { transform: translateY(-244px); opacity: 1; } /* Movimento maior para cima */
+            44% { transform: translateY(-236px); opacity: 1; } /* Desce mais - assentamento ampliado */
+            45% { transform: translateY(-242px); opacity: 1; } /* Sobe novamente - maior amplitude */
+            46% { transform: translateY(-238px); opacity: 1; } /* Desce suavemente - mais perceptível */
             47% { transform: translateY(-240px); opacity: 1; } /* Volta à posição final - assentado */
             56% { transform: translateY(-240px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
@@ -213,10 +213,10 @@
             63% { transform: translateY(-355px); opacity: 0.8; } /* Leve fade no meio do movimento */
             63.5% { transform: translateY(-358px); opacity: 0.9; } /* Quase visível */
             64% { transform: translateY(-360px); opacity: 1; } /* Continua visível subindo */
-            65% { transform: translateY(-362px); opacity: 1; } /* Micro movimento para cima */
-            66% { transform: translateY(-358px); opacity: 1; } /* Desce um pouco - assentamento */
-            67% { transform: translateY(-361px); opacity: 1; } /* Sobe novamente */
-            68% { transform: translateY(-359px); opacity: 1; } /* Desce suavemente */
+            65% { transform: translateY(-364px); opacity: 1; } /* Movimento maior para cima */
+            66% { transform: translateY(-356px); opacity: 1; } /* Desce mais - assentamento ampliado */
+            67% { transform: translateY(-362px); opacity: 1; } /* Sobe novamente - maior amplitude */
+            68% { transform: translateY(-358px); opacity: 1; } /* Desce suavemente - mais perceptível */
             69% { transform: translateY(-360px); opacity: 1; } /* Volta à posição final - assentado */
             78% { transform: translateY(-360px); opacity: 1; } /* PERMANECE TOTALMENTE VISÍVEL */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
@@ -231,10 +231,10 @@
             85% { transform: translateY(-475px); opacity: 0.8; } /* Leve fade no meio do movimento */
             85.5% { transform: translateY(-478px); opacity: 0.9; } /* Quase visível */
             86% { transform: translateY(-480px); opacity: 1; } /* Continua visível subindo */
-            87% { transform: translateY(-482px); opacity: 1; } /* Micro movimento para cima */
-            88% { transform: translateY(-478px); opacity: 1; } /* Desce um pouco - assentamento */
-            89% { transform: translateY(-481px); opacity: 1; } /* Sobe novamente */
-            90% { transform: translateY(-479px); opacity: 1; } /* Desce suavemente */
+            87% { transform: translateY(-484px); opacity: 1; } /* Movimento maior para cima */
+            88% { transform: translateY(-476px); opacity: 1; } /* Desce mais - assentamento ampliado */
+            89% { transform: translateY(-482px); opacity: 1; } /* Sobe novamente - maior amplitude */
+            90% { transform: translateY(-478px); opacity: 1; } /* Desce suavemente - mais perceptível */
             91% { transform: translateY(-480px); opacity: 1; } /* Volta à posição final - assentado */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
